--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:alpine As development
+FROM node:alpine AS development
 
 WORKDIR /usr/src/app
 
@@ -16,7 +16,7 @@ RUN cd apps/auth && npm install --loglevel verbose
 
 RUN npm run build auth --loglevel verbose
 
-FROM node:alpine As production
+FROM node:alpine AS production
 
 ARG NODE_ENV=production
 ENV NODE_ENV=${NODE_ENV}
