--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dashboard-ms",
+  "name": "admin-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -20,53 +20,53 @@
     "test:e2e": "jest --config ./apps/dashboard-ms/test/jest-e2e.json"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.9.12",
-    "@grpc/proto-loader": "^0.7.10",
-    "@nestjs-plugins/nestjs-nats-jetstream-transport": "^2.0.0",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/cqrs": "^10.2.6",
-    "@nestjs/microservices": "^10.2.10",
-    "@nestjs/mongoose": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.0",
-    "bcryptjs": "^2.4.3",
+    "@grpc/grpc-js": "^1.13.0",
+    "@grpc/proto-loader": "^0.7.13",
+    "@nestjs-plugins/nestjs-nats-jetstream-transport": "^2.2.6",
+    "@nestjs/common": "^11.0.11",
+    "@nestjs/config": "^4.0.1",
+    "@nestjs/core": "^11.0.11",
+    "@nestjs/cqrs": "^11.0.2",
+    "@nestjs/microservices": "^11.0.11",
+    "@nestjs/mongoose": "^11.0.1",
+    "@nestjs/platform-express": "^11.0.11",
+    "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "cookie-parser": "^1.4.6",
-    "joi": "^17.11.0",
-    "mongoose": "^8.0.1",
-    "nats": "^2.18.0",
+    "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
+    "joi": "^17.13.3",
+    "mongoose": "^8.12.1",
+    "nats": "^2.29.2",
     "nestjs": "^0.0.1",
-    "nestjs-pino": "^4.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "nestjs-pino": "^4.3.1",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.6",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
-    "pino-pretty": "^10.3.1",
-    "prettier": "^3.0.0",
+    "@nestjs/cli": "^11.0.5",
+    "@nestjs/schematics": "^11.0.2",
+    "@nestjs/testing": "^11.0.11",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.10",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "jest": "^29.7.0",
+    "pino-pretty": "^13.0.0",
+    "prettier": "^3.5.3",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.6",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.8.2"
   },
   "jest": {
     "moduleFileExtensions": [
