--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "admin-backend",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
+  "author": "Mahdi Vajdi",
+  "description": "A sample microservice admin panel backend",
+  "private": false,
   "license": "UNLICENSED",
+  "workspaces": [
+    "apps/account",
+    "apps/agent",
+    "apps/auth",
+    "apps/channel",
+    "apps/gateway"
+  ],
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
@@ -18,55 +24,6 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/dashboard-ms/test/jest-e2e.json"
-  },
-  "dependencies": {
-    "@grpc/grpc-js": "^1.13.0",
-    "@grpc/proto-loader": "^0.7.13",
-    "@nestjs-plugins/nestjs-nats-jetstream-transport": "^2.2.6",
-    "@nestjs/common": "^11.0.11",
-    "@nestjs/config": "^4.0.1",
-    "@nestjs/core": "^11.0.11",
-    "@nestjs/cqrs": "^11.0.2",
-    "@nestjs/microservices": "^11.0.11",
-    "@nestjs/mongoose": "^11.0.1",
-    "@nestjs/platform-express": "^11.0.11",
-    "bcryptjs": "^3.0.2",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "cookie-parser": "^1.4.7",
-    "joi": "^17.13.3",
-    "mongoose": "^8.12.1",
-    "nats": "^2.29.2",
-    "nestjs": "^0.0.1",
-    "nestjs-pino": "^4.3.1",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^11.0.5",
-    "@nestjs/schematics": "^11.0.2",
-    "@nestjs/testing": "^11.0.11",
-    "@types/bcryptjs": "^3.0.0",
-    "@types/cookie-parser": "^1.4.8",
-    "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.10",
-    "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
-    "eslint": "^9.22.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "jest": "^29.7.0",
-    "pino-pretty": "^13.0.0",
-    "prettier": "^3.5.3",
-    "source-map-support": "^0.5.21",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.6",
-    "ts-loader": "^9.5.2",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.8.2"
   },
   "jest": {
     "moduleFileExtensions": [
