--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -19,6 +19,7 @@
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.11",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.7",
     "express": "^5.0.1",
     "joi": "^17.13.3",
     "nestjs-pino": "^4.3.1"
