--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@app/common": "file:../../libs/common",
     "@nestjs-plugins/nestjs-nats-jetstream-transport": "^2.2.6",
     "@nestjs/common": "^11.0.11",
     "@nestjs/config": "^4.0.1",
