--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@app/common": "file:../../libs/common",
     "@grpc/grpc-js": "^1.13.0",
     "@nestjs-plugins/nestjs-nats-jetstream-transport": "^2.2.6",
     "@nestjs/common": "^11.0.11",
@@ -21,6 +20,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/microservices": "^11.0.11",
     "@nestjs/mongoose": "^11.0.1",
+    "admin-common": "file:../../libs/common",
     "bcryptjs": "^3.0.2",
     "joi": "^17.13.3",
     "nestjs-pino": "^4.3.1"
