build(docker): update dockerfile for the account app

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       target: release
     #    command: npm run start:dev account
     env_file:
-      - ../.env
+      - ../apps/account/.env
     volumes:
       - ../.:/usr/src/app
     depends_on:
