build(docker): update dockerfile for the account app and the root package.json

--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "private": false,
   "license": "UNLICENSED",
   "workspaces": [
-    "apps/account",
-    "apps/agent",
-    "apps/auth",
-    "apps/channel",
-    "apps/gateway"
+    "apps/*",
+    "libs/*"
   ],
   "scripts": {
     "build": "nest build",
