--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -18,6 +18,7 @@
     "@nestjs/microservices": "^11.0.11",
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.11",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "express": "^5.0.1",
