feat(logger): change logger to winston and add docker compose for local development

--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "moduleNameMapper": {
       "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1"
     }
+  },
+  "dependencies": {
+    "joi": "^17.13.3"
   }
 }
