--- a/apps/account/package.json
+++ b/apps/account/package.json
@@ -19,8 +19,7 @@
     "@nestjs/cqrs": "^11.0.2",
     "@nestjs/microservices": "^11.0.11",
     "@nestjs/mongoose": "^11.0.1",
-    "joi": "^17.13.3",
-    "nestjs-pino": "^4.3.1"
+    "joi": "^17.13.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.5",
