--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -22,8 +22,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "express": "^5.0.1",
-    "joi": "^17.13.3",
-    "nestjs-pino": "^4.3.1"
+    "joi": "^17.13.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.5",
