--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,13 +12,15 @@
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@app/common/*": ["libs/common/src/*"],
+      "@app/common/*": [
+        "libs/common/src/*"
+      ]
     }
   }
 }
