--- a/apps/agent/package.json
+++ b/apps/agent/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "nest build",
+    "start:dev": "nest start --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
