--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -88,9 +88,11 @@ services:
 
   mongo:
     image: mongo
+    container_name: admin-mongodb
 
   nats:
     image: nats
+    container_name: admin-nats
     ports:
       - '4222:4222'
       - '8222:8222'
