refactor(account-service): modify the architecture of the service
- add command client to the infrastructure
- add database module to the infrastructure

--- a/apps/account/.env.example
+++ b/apps/account/.env.example
@@ -7,3 +7,7 @@ MONGODB_URI=mongodb://mongo/dashboard
 # Transport Config
 NATS_URI=nats://nats:4222
 ACCOUNT_GRPC_URL=account:5001
+
+LOG_USE_FILE=false
+LOG_FILE=logs/account.log
+LOG_LEVEL=verbose
