chore(.env): update example files

--- a/apps/agent/.env.example
+++ b/apps/agent/.env.example
@@ -8,3 +8,8 @@ MONGODB_URI=mongodb://mongo/dashboard
 NATS_URI=nats://nats:4222
 AUTH_GRPC_URL=auth:5001
 AGENT_GRPC_URL=agent:5001
+
+# Logger
+LOG_USE_FILE=false
+LOG_FILE=logs/account.log
+LOG_LEVEL=verbose
