--- a/apps/auth/.env.example
+++ b/apps/auth/.env.example
@@ -10,3 +10,8 @@ NATS_URI=nats://nats:4222
 AUTH_GRPC_URL=auth:5001
 ACCOUNT_GRPC_URL=account:5001
 AGENT_GRPC_URL=agent:5001
+
+# Logger
+LOG_USE_FILE=false
+LOG_FILE=logs/account.log
+LOG_LEVEL=verbose
