--- a/apps/gateway/.env.example
+++ b/apps/gateway/.env.example
@@ -1,5 +1,5 @@
 # Env Config
-NODE_ENV=development
+NODE_ENV=production
 
 # Http Server Config
 HTTP_PORT=3000
@@ -9,3 +9,8 @@ NATS_URI=nats://nats:4222
 AUTH_GRPC_URL=auth:5001
 CHANNEL_GRPC_URL=channel:5001
 AGENT_GRPC_URL=agent:5001
+
+# Logger
+LOG_USE_FILE=false
+LOG_FILE=logs/account.log
+LOG_LEVEL=verbose
