refactor(user-service): error handling and mongoose register
- use custom errors in the services
- use new Result class for nats responses
- move repository interfaces to the domain
- modify the repository service to use domain models
- modify the service to user doamin models
- add infrastructure library
- add root database module to the infrastructure library
- throw rpc exceptions in the nats and grpc controllers

--- a/package.json
+++ b/package.json
@@ -43,10 +43,8 @@
       "<rootDir>/apps/"
     ],
     "moduleNameMapper": {
-      "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1"
+      "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1",
+      "^@app/infrastructure(|/.*)$": "<rootDir>/libs/infrastructure/src/$1"
     }
-  },
-  "dependencies": {
-    "joi": "^17.13.3"
   }
 }
