--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,17 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
+      "@app/common": [
+        "libs/common/src"
+      ],
       "@app/common/*": [
         "libs/common/src/*"
+      ],
+      "@app/infrastructure": [
+        "libs/infrastructure/src"
+      ],
+      "@app/infrastructure/*": [
+        "libs/infrastructure/src/*"
       ]
     }
   }
