feat(auth-service): add refresh token database
- add database module to the auth service
- add refresh token entity to the auth database module

--- a/apps/auth/.env.example
+++ b/apps/auth/.env.example
@@ -1,6 +1,9 @@
 # Env Config
 NODE_ENV=development
 
+# Database config
+MONGO_URI=mongodb://localhost:27017/dashboard
+
 # Jwt Config
 JWT_ACCESS_SECRET=a.long.unique.random.string
 JWT_REFRESH_SECRET=a.long.unique.random.string
