--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -17,7 +17,8 @@
     "@nestjs/microservices": "^11.0.11",
     "@nestjs/mongoose": "^11.0.1",
     "bcryptjs": "^3.0.2",
-    "joi": "^17.13.3"
+    "joi": "^17.13.3",
+    "mongoose": "^8.13.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.5",
