--- a/apps/user/.env.example
+++ b/apps/user/.env.example
@@ -2,7 +2,7 @@
 NODE_ENV=development
 
 # Database config
-MONGO_URI=mongodb://mongo/dashboard
+MONGO_URI=mongodb://mongo/nsetjs-admin-user
 
 # Transport Config
 NATS_URI=nats://nats:4222
