feat(common): remove stream models and fix errors in apps

--- a/apps/project/.env.example
+++ b/apps/project/.env.example
@@ -2,7 +2,7 @@
 NODE_ENV=production
 
 # Database Config
-MONGODB_URI=mongodb://mongo/dashboard
+MONGO_URI=mongodb://mongo/dashboard
 
 # Transport Config
 NATS_URI=nats://nats:4222
