--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "libs/*"
   ],
   "scripts": {
-    "build": "nest build",
+    "build": "nest build --all",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
