docs(swagger): set up swagger for gateway service

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "libs/*"
   ],
   "scripts": {
+    "prebuild": "rm -rf dist",
     "build": "nest build --all",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
