--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -14,6 +14,7 @@
     "@nestjs/microservices": "^11.0.11",
     "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.11",
+    "@nestjs/swagger": "^11.2.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
