feat(readme): add README.md file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestjs-project-manager",
+  "name": "nestjs-microservice-example",
   "author": "Mahdi Vajdi",
   "description": "",
   "private": false,
