--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -18,7 +18,7 @@ services:
     depends_on:
       - base
       - nats
-      - mongo
+      - postgres
 
   user-service:
     container_name: user-service
@@ -34,7 +34,7 @@ services:
     depends_on:
       - base
       - nats
-      - mongo
+      - postgres
 
   auth-service:
     container_name: auth-service
@@ -50,7 +50,7 @@ services:
     depends_on:
       - base
       - nats
-      - mongo
+      - postgres
 
   gateway-service:
     container_name: gateway-service
@@ -72,14 +72,45 @@ services:
       - auth-service
       - user-service
 
-  mongo:
-    image: mongo
-    container_name: mongo
+  postgres:
+    image: postgres:16-alpine
+    container_name: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "${POSTGRES_PORT}:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   nats:
-    image: nats
+    image: nats:latest
     container_name: nats
-    ports:
-      - '4222:4222'
-      - '8222:8222'
+    restart: always
     command: -js
+    ports:
+      - "${NATS_CLIENT_PORT}:4222"
+      - "${NATS_MGMT_PORT}:8222"
+    volumes:
+      - nats_data:/data
+
+  redis:
+    image: redis:latest
+    container_name: redis
+    restart: always
+    ports:
+      - "${REDIS_PORT}:6379"
+    volumes:
+      - redis_data:/data
+
+volumes:
+  postgres_data:
+  nats_data:
+  redis_data:
