feat(shared): update infrastructure
- add a new infrastructure in the shared lib
- remove the infrastructure lib
- add postgres module to the infrastructure in the shared lib

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     ],
     "moduleNameMapper": {
       "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1",
-      "^@app/infrastructure(|/.*)$": "<rootDir>/libs/infrastructure/src/$1"
+      "^@app/infrastructure(|/.*)$": "<rootDir>/libs/infrastructure/src/$1",
+      "^@app/shared(|/.*)$": "<rootDir>/libs/shared/src/$1"
     }
   }
 }
