--- a/package.json
+++ b/package.json
@@ -47,5 +47,17 @@
       "^@app/identity(|/.*)$": "<rootDir>/libs/identity/src/$1",
       "^@app/shared(|/.*)$": "<rootDir>/libs/shared/src/$1"
     }
+  },
+  "devDependencies": {
+    "@nestjs/cli": "11.0.14",
+    "@nestjs/schematics": "11.0.9",
+    "@swc/cli": "0.7.9",
+    "@swc/core": "1.15.3",
+    "@types/express": "5.0.5",
+    "@types/jest": "30.0.0",
+    "@types/node": "24.10.1",
+    "ts-loader": "9.5.4",
+    "ts-node": "10.9.2",
+    "typescript": "5.9.3"
   }
 }
