chore(docker): update dockerfiles

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,45 +1,32 @@
 services:
   postgres:
     image: postgres:18-alpine
-    container_name: postgres
     env_file:
       - ../.env
     volumes:
-      - nestjs_microservice_example_postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}" ]
+      test: [ 'CMD-SHELL', 'pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}' ]
       interval: 10s
       timeout: 5s
       retries: 5
-    networks:
-      - nestjs-microservice-example-net
 
   nats:
     image: nats:latest
-    container_name: nats
     env_file:
       - ../.env
     command: -js
     volumes:
-      - nestjs_microservice_example_nats_data:/data
-    networks:
-      - nestjs-microservice-example-net
+      - nats_data:/data
 
   redis:
     image: redis:latest
-    container_name: redis
     env_file:
       - ../.env
     volumes:
-      - nestjs_microservice_example_redis_data:/data
-    networks:
-      - nestjs-microservice-example-net
+      - redis_data:/data
 
 volumes:
-  nestjs_microservice_example_postgres_data:
-  nestjs_microservice_example_nats_data:
-  nestjs_microservice_example_redis_data:
-
-networks:
-  nestjs-microservice-example-net:
-    driver: bridge
+  postgres_data:
+  nats_data:
+  redis_data:
