--- a/docker/docker-compose.local.yml
+++ b/docker/docker-compose.local.yml
@@ -1,22 +1,24 @@
+name: nestjs-microservice-example
+
 services:
   postgres:
     restart: unless-stopped
     env_file:
       - ../.env
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - '${POSTGRES_PORT}:5432'
 
   nats:
     restart: always
     env_file:
       - ../.env
     ports:
-      - "${NATS_CLIENT_PORT}:4222"
-      - "${NATS_MGMT_PORT}:8222"
+      - '${NATS_CLIENT_PORT}:4222'
+      - '${NATS_MGMT_PORT}:8222'
 
   redis:
     restart: always
     env_file:
       - ../.env
     ports:
-      - "${REDIS_PORT}:6379"
+      - '${REDIS_PORT}:6379'
