feat(identity): make the identity service completely event-driven and based on cqrs
- use nats for event publishing
- separate read and write side
- update user aggregate to be compilate with cqrs

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,10 @@ POSTGRES_DB=microservices
 # NATS
 NATS_CLIENT_PORT=4222
 NATS_MGMT_PORT=8222
+NATS_SERVERS=nats://localhost:4222
+# Optional auth
+# NATS_USER=myuser
+# NATS_PASS=mypass
 
 # Redis
 REDIS_PORT=6379
