--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "@nestjs/cqrs": "11.0.3",
     "@nestjs/microservices": "11.1.9",
     "@nestjs/platform-express": "11.1.9",
+    "@nestjs/schedule": "6.1.0",
     "@nestjs/typeorm": "11.0.0",
     "bcrypt": "6.0.0",
+    "nats": "2.29.3",
     "pg": "8.16.3",
     "rxjs": "7.8.2",
     "typeorm": "0.3.27",
