--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@nestjs/swagger": "11.2.3",
     "@nestjs/typeorm": "11.0.0",
     "bcrypt": "6.0.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.3",
     "nats": "2.29.3",
     "pg": "8.16.3",
     "rxjs": "7.8.2",
